--- a/frontend/src/routes/components/nav/nav.css
+++ b/frontend/src/routes/components/nav/nav.css
@@ -2,13 +2,14 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #333;
+    background-color: #eeeeee;
     color: #fff;
     opacity: 0.8;
     width: 100%;
     height: 70px;
     position: fixed;
     top: 0px;
+    padding: 10px;
   }
   ul {
     display: flex;
@@ -18,7 +19,7 @@
     padding: 10px;
   }
   .navbar a {
-    color: #fff;
+    color: #ffffff;
   }
   .navbar .log {
     font-weight: 400;
@@ -26,6 +27,14 @@
 
   .title {
     margin: 0 20px;
+    color: #4e4e4e;
+    font-size: xx-large;
+    text-decoration: none;
+  }
+
+  h3{
+    color: #333;
+    font-size: 40px;
   }
 
   .navigation {
@@ -33,10 +42,10 @@
   }
 
 /* CSS */
-a {
+.button {
   align-items: center;
   appearance: none;
-  background-color: #fff;
+  background-color: #3b3b3b;
   border-radius: 24px;
   border-style: none;
   box-shadow: rgba(0, 0, 0, .2) 0 3px 5px -1px,rgba(0, 0, 0, .14) 0 6px 10px 0,rgba(0, 0, 0, .12) 0 1px 18px 0;
@@ -69,37 +78,37 @@ a {
   color: #333;
 }
 
-a:hover {
+.button:hover {
   background: #F6F9FE;
   color: #174ea6;
 }
 
-a:active {
+.button:active {
   box-shadow: 0 4px 4px 0 rgb(60 64 67 / 30%), 0 8px 12px 6px rgb(60 64 67 / 15%);
   outline: none;
 }
 
-a:focus {
+.button:focus {
   outline: none;
   border: 2px solid #4285f4;
 }
 
-a:not(:disabled) {
+.button:not(:disabled) {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
 
-a:not(:disabled):hover {
+.button:not(:disabled):hover {
   box-shadow: rgba(60, 64, 67, .3) 0 2px 3px 0, rgba(60, 64, 67, .15) 0 6px 10px 4px;
 }
 
-a:not(:disabled):focus {
+.button:not(:disabled):focus {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
 
-a:not(:disabled):active {
+.button:not(:disabled):active {
   box-shadow: rgba(60, 64, 67, .3) 0 4px 4px 0, rgba(60, 64, 67, .15) 0 8px 12px 6px;
 }
 
-a:disabled {
+.button:disabled {
   box-shadow: rgba(60, 64, 67, .3) 0 1px 3px 0, rgba(60, 64, 67, .15) 0 4px 8px 3px;
 }
