--- a/frontend/src/routes/SignUp/SignUp.css
+++ b/frontend/src/routes/SignUp/SignUp.css
@@ -3,10 +3,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    color: black;
     flex-direction: column;
     margin: 15% 40%;  
-    background-color: aliceblue; 
+    background-color: rgb(255, 255, 255); 
     border-radius: 10px;
     padding: 20px 0;
     opacity: 0.8;
